--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 key
+*.wav
 
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
